--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
@@ -14,6 +15,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -21,9 +23,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
+    }
+}
+kapt {
+    arguments {
+        arg("key", "base")
     }
 }
 
@@ -37,5 +47,17 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.github.WuSG2016:ULog:0.1'
+    implementation project(path: ':common')
+    kapt project(':compiler')
+    implementation project(path: ':annotation')
+
+}
+afterEvaluate {
+    android.applicationVariants.all { variant ->
+        if (variant.buildType.name == 'debug') {
+            def kotlinGenerated = file("$buildDir/generated/source/kaptKotlin/${variant.name}")
+            variant.addJavaSourceFoldersToModel(kotlinGenerated)
+            return
+        }
+    }
 }
