--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wsg.common" >
+    package="com.wsg.common">
+
     <application>
         <provider
             android:name="com.wsg.LoggerRuntimeProvider"
-            android:authorities="com.wsg.LoggerRuntimeProvider"
+            android:authorities="${applicationId}.LoggerRuntimeProvider"
             android:exported="false"
             android:multiprocess="true" />
     </application>
-    </manifest>
+</manifest>
